Colaboratory를 통해 생성됨

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -34,7 +34,6 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "from google.colab import files\n",
         "from IPython.display import display\n",
         "import folium #지리정보 시각화\n",
         "import geopandas\n",
@@ -50,23 +49,12 @@
     {
       "cell_type": "code",
       "source": [
-        "uploaded = files.upload()"
-      ],
-      "metadata": {
-        "id": "RWFlriRr4o3g"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "climate_change = pd.read_csv('climate-change.csv')\n",
-        "temperature_anomaly = pd.read_csv('temperature-anomaly.csv')\n",
-        "annual_co_emissions_by_regions = pd.read_csv('annual-co-emissions-by-region.csv')\n",
-        "energy = pd.read_csv('energy.csv')\n",
-        "co2_emissions_and_gdp = pd.read_csv('co2-emissions-and-gdp.csv')\n",
-        "fossil_fuel = pd.read_csv('fossil-fuel-co2-emissions-by-nation.csv')"
+        "climate_change = pd.read_csv('https://raw.githubusercontent.com/Runningmancage/P-No2/main/climate-change.csv')\n",
+        "temperature_anomaly = pd.read_csv('https://raw.githubusercontent.com/Runningmancage/P-No2/main/temperature-anomaly.csv')\n",
+        "annual_co_emissions_by_regions = pd.read_csv('https://raw.githubusercontent.com/Runningmancage/P-No2/main/annual-co-emissions-by-region.csv')\n",
+        "energy = pd.read_csv('https://raw.githubusercontent.com/Runningmancage/P-No2/main/energy.csv')\n",
+        "co2_emissions_and_gdp = pd.read_csv('https://raw.githubusercontent.com/Runningmancage/P-No2/main/co2-emissions-and-gdp.csv')\n",
+        "fossil_fuel = pd.read_csv('https://raw.githubusercontent.com/Runningmancage/P-No2/main/fossil-fuel-co2-emissions-by-nation.csv')"
       ],
       "metadata": {
         "id": "mTF50Idz4JEa"
@@ -175,6 +163,39 @@
       ],
       "metadata": {
         "id": "pzkRaOcrcht0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cli['Year'].value_counts()"
+      ],
+      "metadata": {
+        "id": "A850-UWDIJh5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cli = df_cli.loc[(df_cli['Year']>1900)].reset_index(drop = True)"
+      ],
+      "metadata": {
+        "id": "q7_4_B3vIqfy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cli.value_counts()"
+      ],
+      "metadata": {
+        "id": "IaumjtYGKhIx"
       },
       "execution_count": null,
       "outputs": []
