Colaboratory를 통해 생성됨

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -203,10 +203,10 @@
     {
       "cell_type": "code",
       "source": [
-        "energy.head()"
+        "df_cli['Country'].unique()"
       ],
       "metadata": {
-        "id": "xqR62PWmDmx2"
+        "id": "UEOghcqMzk6-"
       },
       "execution_count": null,
       "outputs": []
@@ -214,40 +214,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_e = energy_copy.drop('Unnamed: 0', axis =1).reset_index(drop=True)"
-      ],
-      "metadata": {
-        "id": "7RDD-B_mdBt_"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df_e.head(13)"
-      ],
-      "metadata": {
-        "id": "bSryv_XGdOAp"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "annual_co_emissions_by_regions.head()"
-      ],
-      "metadata": {
-        "id": "8etc739FD3AD"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "temperature_anomaly.head()"
+        "temperature_anomaly.head() # Median temperature anomaly from 1961-1990 average 961~1990 평균의 중위수 기준"
       ],
       "metadata": {
         "id": "iuMSH-ZiDwX3"
@@ -269,10 +236,43 @@
     {
       "cell_type": "code",
       "source": [
-        "preview()"
+        "energy.head()"
+      ],
+      "metadata": {
+        "id": "jSdvzgMg1Exl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_e = energy_copy.drop('Unnamed: 0', axis =1).reset_index(drop=True)"
       ],
       "metadata": {
         "id": "3LI5Hl3f6JCJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_e.head(13)"
+      ],
+      "metadata": {
+        "id": "enTeaAFD1Kvs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "annual_co_emissions_by_regions.head()"
+      ],
+      "metadata": {
+        "id": "bmRWpT5A1eQc"
       },
       "execution_count": null,
       "outputs": []
