Colaboratory를 통해 생성됨

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -68,9 +68,9 @@
         "climate_copy = climate_change.copy()\n",
         "temperature_copy = temperature_anomaly.copy()\n",
         "annual_copy = annual_co_emissions_by_regions.copy()\n",
-        "energy_copy =energy.copy()\n",
         "co2_emissions_copy = co2_emissions_and_gdp.copy()\n",
-        "fossil_copy =fossil_fuel.copy()"
+        "fossil_copy =fossil_fuel.copy()\n",
+        "energy_copy =energy.copy()"
       ],
       "metadata": {
         "id": "cwJRjdNLIKRu"
@@ -126,43 +126,10 @@
     {
       "cell_type": "code",
       "source": [
-        "df_cli.groupby('Country')['Snow cover'].sum()"
-      ],
-      "metadata": {
-        "id": "31XcIG-iZhrf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df_cli[df_cli['Country']=='North America'] # Snow cover 컬럼 속 데이터는 모두 북미임 사용 못 할 듯"
-      ],
-      "metadata": {
-        "id": "nZli1hOYacF0"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "df_cli.drop(columns = ['CH4 concentrations','N2O concentrations', 'February', 'September','Snow cover', 'Arctic sea ice'], inplace = True)"
       ],
       "metadata": {
         "id": "zZ5b1Xr3b9Z1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df_cli[df_cli['Country']=='World']"
-      ],
-      "metadata": {
-        "id": "pzkRaOcrcht0"
       },
       "execution_count": null,
       "outputs": []
@@ -181,21 +148,10 @@
     {
       "cell_type": "code",
       "source": [
-        "df_cli = df_cli.loc[(df_cli['Year']>1900)].reset_index(drop = True)"
+        "#df_cli = df_cli.loc[(df_cli['Year']>1979)].reset_index(drop = True)"
       ],
       "metadata": {
         "id": "q7_4_B3vIqfy"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df_cli.value_counts()"
-      ],
-      "metadata": {
-        "id": "IaumjtYGKhIx"
       },
       "execution_count": null,
       "outputs": []
@@ -214,6 +170,17 @@
     {
       "cell_type": "code",
       "source": [
+        "df_cli.head(-10)"
+      ],
+      "metadata": {
+        "id": "P58BkXdYxLT5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "temperature_anomaly.head() # Median temperature anomaly from 1961-1990 average 961~1990 평균의 중위수 기준"
       ],
       "metadata": {
@@ -225,7 +192,29 @@
     {
       "cell_type": "code",
       "source": [
-        "temperature_anomaly.head(-10)"
+        "temperature_copy.drop(columns = ['Code'], inplace = True)"
+      ],
+      "metadata": {
+        "id": "MSAqYxQkxdKA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_t = temperature_copy.rename(columns = {'Entity':'Country'}) #.loc[(temperature_copy['Year']>1979)].reset_index(drop = True)"
+      ],
+      "metadata": {
+        "id": "dJjsPFf-1Kte"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_t.head(-10)"
       ],
       "metadata": {
         "id": "1QQNAnCoGkmC"
@@ -273,6 +262,138 @@
       ],
       "metadata": {
         "id": "bmRWpT5A1eQc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_r = annual_copy.drop(columns = 'Code').rename(columns = {'Entity':'Country'}) #.loc[(annual_copy['Year']>1979)].reset_index(drop = True)"
+      ],
+      "metadata": {
+        "id": "nX5wZLNZXEUe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_r.head()"
+      ],
+      "metadata": {
+        "id": "Zzgp71zldI2n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "co2_emissions_copy.head(-10)"
+      ],
+      "metadata": {
+        "id": "rsex8ObodXru"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_ce = co2_emissions_copy.drop(columns = 'Code').rename(columns = {'Entity':'Country'}) #.loc[(co2_emissions_copy['Year']>1979)].reset_index(drop = True)"
+      ],
+      "metadata": {
+        "id": "1pvg41MvkbwA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_ce.head(-10)"
+      ],
+      "metadata": {
+        "id": "WsWE076rklUL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fossil_copy.head(-10)"
+      ],
+      "metadata": {
+        "id": "uLOCEpwwkxST"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cli.head(1)"
+      ],
+      "metadata": {
+        "id": "1IeOH-HrqoH7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_t.head(1)"
+      ],
+      "metadata": {
+        "id": "n1J3h7vzq-iR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_r.head(1)"
+      ],
+      "metadata": {
+        "id": "ozRxMA5xrEks"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_ce.head(1)"
+      ],
+      "metadata": {
+        "id": "T0Yipk6HrKlU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fossil_copy.head(1)"
+      ],
+      "metadata": {
+        "id": "s8y8o2IWrrer"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_e.head(1)"
+      ],
+      "metadata": {
+        "id": "3FXXdZM6rxaJ"
       },
       "execution_count": null,
       "outputs": []
