Colaboratory를 통해 생성됨

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -368,6 +368,17 @@
     {
       "cell_type": "code",
       "source": [
+        "df_r.shape"
+      ],
+      "metadata": {
+        "id": "U6feip5S5cM6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df_ce.head(1)"
       ],
       "metadata": {
@@ -379,7 +390,18 @@
     {
       "cell_type": "code",
       "source": [
-        "fossil_copy.head(1)"
+        "df_ce.shape"
+      ],
+      "metadata": {
+        "id": "kw08P0vC5f8n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fossil_copy.head(-10)"
       ],
       "metadata": {
         "id": "s8y8o2IWrrer"
@@ -390,10 +412,92 @@
     {
       "cell_type": "code",
       "source": [
-        "df_e.head(1)"
+        "fossil_copy.shape"
+      ],
+      "metadata": {
+        "id": "j_AbfcD35id2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_e.head(1)\n",
+        "df_e = df_e.drop(columns = ['Energy_intensity_per_capita','Energy_intensity_by_GDP'])"
       ],
       "metadata": {
         "id": "3FXXdZM6rxaJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_e.shape"
+      ],
+      "metadata": {
+        "id": "LusmSyF15mz2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_n = df_r.merge(df_ce, how = 'outer')\n",
+        "df_n.head(1)"
+      ],
+      "metadata": {
+        "id": "_YXwg4GV7Zjv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_1 = df_n.merge(df_e, how = 'outer')\n",
+        "df_2 = df_1.merge(fossil_copy, how = 'outer')\n",
+        "df_3 = df_2.merge(df_t, how = 'outer')\n",
+        "df_t1 = df_3.merge(df_cli, how = 'outer')"
+      ],
+      "metadata": {
+        "id": "x5hjrk4N_K4F"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_t1.info()"
+      ],
+      "metadata": {
+        "id": "SHH7_B8EAjEl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_total = df_t1.drop(columns = ['Sea surface temp (lower-bound)','Sea surface temp (upper-bound)','Lower bound (95% CI)','Upper bound (95% CI)','Annual CO2 emissions (zero filled)'])"
+      ],
+      "metadata": {
+        "id": "emApv28HBt8S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_total.loc[(df_total['Year']>1900)].reset_index(drop = True).info()"
+      ],
+      "metadata": {
+        "id": "ciu65dd0DdhV"
       },
       "execution_count": null,
       "outputs": []
