Colaboratory를 통해 생성됨

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -324,10 +324,46 @@
     {
       "cell_type": "code",
       "source": [
-        "fossil_copy.head(-10)"
+        "df_ce.loc[df_ce[\"Country\"]==\"United Kingdom\"]"
+      ],
+      "metadata": {
+        "id": "CRDQz8ySzhgz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fossil_ti = []\n",
+        "for i in fossil_copy[\"Country\"]:\n",
+        "  fossil_ti.append(i.title())\n",
+        "print(fossil_ti)"
       ],
       "metadata": {
         "id": "uLOCEpwwkxST"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fossil_copy[\"Country\"] = fossil_ti"
+      ],
+      "metadata": {
+        "id": "60jBUTDS2Efx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fossil_copy.loc[fossil_copy[\"Country\"]==\"United Kingdom\"]"
+      ],
+      "metadata": {
+        "id": "deO-SVmozL0W"
       },
       "execution_count": null,
       "outputs": []
@@ -472,7 +508,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_t1.info()"
+        "df_t1.head(-10)"
       ],
       "metadata": {
         "id": "SHH7_B8EAjEl"
@@ -494,10 +530,85 @@
     {
       "cell_type": "code",
       "source": [
-        "df_total.loc[(df_total['Year']>1900)].reset_index(drop = True).info()"
+        "df_tf = df_total.loc[(df_total['Year']>1900)].reset_index(drop = True)"
       ],
       "metadata": {
         "id": "ciu65dd0DdhV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_tf"
+      ],
+      "metadata": {
+        "id": "MAXBPYJH8aW8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_tf[\"Country\"].unique()"
+      ],
+      "metadata": {
+        "id": "3iApHwIh25Qm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_tf.loc[df_tf[\"Country\"]=='Europe']"
+      ],
+      "metadata": {
+        "id": "VIHRFVjl3YnM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_tf.loc[df_tf[\"Country\"]=='Europe (excl. EU-27)']"
+      ],
+      "metadata": {
+        "id": "-82GzXi13sdH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_tf.drop(labels = 'United Korea', axis = 0).reset_index(drop=True)"
+      ],
+      "metadata": {
+        "id": "z1PIbiBP5o_V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ZFNgEO_25TTy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_tf.loc[df_tf[\"Country\"]=='United Korea']"
+      ],
+      "metadata": {
+        "id": "9fOZ43m23s32"
       },
       "execution_count": null,
       "outputs": []
