Colaboratory를 통해 생성됨

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -170,10 +170,21 @@
     {
       "cell_type": "code",
       "source": [
-        "df_cli.head(-10)"
+        "df_cli.fillna(df_cli.mean())"
       ],
       "metadata": {
         "id": "P58BkXdYxLT5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cli = df_cli.loc[(df_cli['Year']<2022)].reset_index(drop=True)"
+      ],
+      "metadata": {
+        "id": "S6AtWSiWfpry"
       },
       "execution_count": null,
       "outputs": []
@@ -214,7 +225,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_t.head(-10)"
+        "df_t.info()"
       ],
       "metadata": {
         "id": "1QQNAnCoGkmC"
@@ -247,7 +258,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_e.head(13)"
+        "df_e.dropna(inplace = True)"
       ],
       "metadata": {
         "id": "enTeaAFD1Kvs"
@@ -280,7 +291,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_r.head()"
+        "df_r.info()"
       ],
       "metadata": {
         "id": "Zzgp71zldI2n"
@@ -313,21 +324,10 @@
     {
       "cell_type": "code",
       "source": [
-        "df_ce.head(-10)"
+        "df_ce.dropna(inplace = True)"
       ],
       "metadata": {
         "id": "WsWE076rklUL"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df_ce.loc[df_ce[\"Country\"]==\"United Kingdom\"]"
-      ],
-      "metadata": {
-        "id": "CRDQz8ySzhgz"
       },
       "execution_count": null,
       "outputs": []
@@ -371,6 +371,17 @@
     {
       "cell_type": "code",
       "source": [
+        "fossil_copy.info()"
+      ],
+      "metadata": {
+        "id": "fdJ6paiUg9b7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df_cli.head(1)"
       ],
       "metadata": {
@@ -397,17 +408,6 @@
       ],
       "metadata": {
         "id": "ozRxMA5xrEks"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df_r.shape"
-      ],
-      "metadata": {
-        "id": "U6feip5S5cM6"
       },
       "execution_count": null,
       "outputs": []
@@ -519,7 +519,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_total = df_t1.drop(columns = ['Sea surface temp (lower-bound)','Sea surface temp (upper-bound)','Lower bound (95% CI)','Upper bound (95% CI)','Annual CO2 emissions (zero filled)'])"
+        "df_total = df_t1.drop(columns = ['Sea surface temp (lower-bound)','Sea surface temp (upper-bound)','Lower bound (95% CI)','Upper bound (95% CI)'])"
       ],
       "metadata": {
         "id": "emApv28HBt8S"
@@ -541,7 +541,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_tf"
+        "df_tf.isnull().sum()"
       ],
       "metadata": {
         "id": "MAXBPYJH8aW8"
@@ -552,7 +552,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_tf[\"Country\"].unique()"
+        "df_tf1 = df_tf"
       ],
       "metadata": {
         "id": "3iApHwIh25Qm"
@@ -563,7 +563,30 @@
     {
       "cell_type": "code",
       "source": [
-        "df_tf.loc[df_tf[\"Country\"]=='Europe']"
+        "#df_tf1 = df_tf.fillna(df_tf.mean())"
+      ],
+      "metadata": {
+        "id": "5fptWHeBKAAT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#df_tf1 = df_tf1.dropna().reset_index(drop=True)"
+      ],
+      "metadata": {
+        "id": "pwI26lRMKlKm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = df_tf1[df_tf1[\"Country\"].str.contains('&')].index\n",
+        "A"
       ],
       "metadata": {
         "id": "VIHRFVjl3YnM"
@@ -574,10 +597,10 @@
     {
       "cell_type": "code",
       "source": [
-        "df_tf.loc[df_tf[\"Country\"]=='Europe (excl. EU-27)']"
+        "df_tf1.reset_index(drop=True,inplace = True)"
       ],
       "metadata": {
-        "id": "-82GzXi13sdH"
+        "id": "o-whedhUQ2X4"
       },
       "execution_count": null,
       "outputs": []
@@ -585,30 +608,67 @@
     {
       "cell_type": "code",
       "source": [
-        "df_tf.drop(labels = 'United Korea', axis = 0).reset_index(drop=True)"
+        "from sklearn.model_selection import train_test_split"
       ],
       "metadata": {
-        "id": "z1PIbiBP5o_V"
+        "id": "dqk4PyOORSpJ"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        ""
+        "df_tf1.head()"
       ],
       "metadata": {
-        "id": "ZFNgEO_25TTy"
-      }
+        "id": "sh67oTmzZ64L"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df_tf.loc[df_tf[\"Country\"]=='United Korea']"
+        "df_tf1.info()"
       ],
       "metadata": {
-        "id": "9fOZ43m23s32"
+        "id": "9enWM7uVcEBJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "world = geopandas.read_file(geopandas.datasets.get_path('naturalearth_lowres'))\n",
+        "t = world.merge(df_tf1, how=\"left\", left_on=['name'], right_on=['Country'])\n",
+        "t=t.dropna()\n",
+        "t[\"Year\"] = t[\"Year\"].astype(int)\n",
+        "\n",
+        "\n",
+        "sorted_df = t.sort_values(by = \"Annual CO2 emissions (zero filled)\", ascending = False)\n",
+        "\n",
+        "fig = px.bar(sorted_df, x = \"name\", y = \"Annual CO2 emissions (zero filled)\",\n",
+        "                    animation_frame = \"Year\",\n",
+        "                    color = \"Annual CO2 emissions (zero filled)\", color_continuous_scale = \"jet\")\n",
+        "                    #title = \"Points Per Game Overall Pick 1-60 Animation by Year and Games\")\n",
+        "\n",
+        "fig.update_layout(template = \"plotly_dark\", font = dict(family = \"PT Sans\"))"
+      ],
+      "metadata": {
+        "id": "0Cr0kWoETz-O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t"
+      ],
+      "metadata": {
+        "id": "33QLIxiidPE9"
       },
       "execution_count": null,
       "outputs": []
