--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -630,6 +630,17 @@
     {
       "cell_type": "code",
       "source": [
+        "df_tf1=df_tf1.replace([\"United States\"], [\"United States of America\"])"
+      ],
+      "metadata": {
+        "id": "TpaSCQyd-ORt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df_tf1.info()"
       ],
       "metadata": {
@@ -643,16 +654,16 @@
       "source": [
         "world = geopandas.read_file(geopandas.datasets.get_path('naturalearth_lowres'))\n",
         "t = world.merge(df_tf1, how=\"left\", left_on=['name'], right_on=['Country'])\n",
-        "t=t.dropna()\n",
-        "t[\"Year\"] = t[\"Year\"].astype(int)\n",
+        "t=t.fillna(0)\n",
+        "t['Year'] = t['Year'].astype(int)\n",
+        "df_final = t.loc[(t['Year']>1900)].reset_index(drop = True)\n",
+        "sorted_df = df_final.sort_values(by = \"Year\", ascending = True)\n",
         "\n",
         "\n",
-        "sorted_df = t.sort_values(by = \"Annual CO2 emissions (zero filled)\", ascending = False)\n",
-        "\n",
-        "fig = px.bar(sorted_df, x = \"name\", y = \"Annual CO2 emissions (zero filled)\",\n",
+        "fig = px.bar(sorted_df, x = \"continent\", y = \"Annual CO2 emissions (zero filled)\",\n",
         "                    animation_frame = \"Year\",\n",
         "                    color = \"Annual CO2 emissions (zero filled)\", color_continuous_scale = \"jet\")\n",
-        "                    #title = \"Points Per Game Overall Pick 1-60 Animation by Year and Games\")\n",
+        "                    \n",
         "\n",
         "fig.update_layout(template = \"plotly_dark\", font = dict(family = \"PT Sans\"))"
       ],
@@ -665,10 +676,67 @@
     {
       "cell_type": "code",
       "source": [
-        "t"
+        "df_final=df_final.loc[df_final['Year']<2020]"
       ],
       "metadata": {
-        "id": "33QLIxiidPE9"
+        "id": "nsRMSXadJ-TM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_p = df_final.groupby(['Year','continent'])['Annual CO2 emissions'].sum().unstack()\n",
+        "df_p"
+      ],
+      "metadata": {
+        "id": "RKJ8mrjGFX80"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_p.loc['1980-1984', :] = df_p.loc[[1980, 1981, 1982, 1983, 1984]].sum()\n",
+        "df_p.loc['1985-1989', :] = df_p.loc[[1985, 1986, 1987, 1988, 1989]].sum()\n",
+        "df_p.loc['1990-1994', :] = df_p.loc[[1990, 1991, 1992, 1993, 1994]].sum()\n",
+        "df_p.loc['1995-1999', :] = df_p.loc[[1995, 1996, 1997, 1998, 1999]].sum()\n",
+        "df_p.loc['2000-2004', :] = df_p.loc[[2000, 2001, 2002, 2003, 2004]].sum()\n",
+        "df_p.loc['2005-2009', :] = df_p.loc[[2005, 2006, 2007, 2008, 2009]].sum()\n",
+        "df_p.loc['2010-2014', :] = df_p.loc[[2010, 2011, 2012, 2013, 2014]].sum()\n",
+        "df_p.loc['2015-2019', :] = df_p.loc[[2015, 2016, 2017, 2018, 2019]].sum()"
+      ],
+      "metadata": {
+        "id": "X4rpVIIPKK7O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_p = df_p.loc[['1980-1984','1985-1989', '1990-1994','1995-1999', '2000-2004','2005-2009', '2010-2014', '2015-2019']]\n",
+        "df_p.reset_index()\n",
+        "df_p"
+      ],
+      "metadata": {
+        "id": "75adtYa6MkQO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(15, 7))\n",
+        "plt.title('CO2 emissions per 5 years', fontsize=15)\n",
+        "plt.ylabel('CO2 emissions')\n",
+        "sns.lineplot(data=df_p, marker='o', linewidth=3)"
+      ],
+      "metadata": {
+        "id": "_r-cXO_5NNUa"
       },
       "execution_count": null,
       "outputs": []
