--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -652,6 +652,17 @@
     {
       "cell_type": "code",
       "source": [
+        "df_tf1 =df_tf1.fillna(df_tf1.mean())"
+      ],
+      "metadata": {
+        "id": "G3a8k-lYKB-O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "world = geopandas.read_file(geopandas.datasets.get_path('naturalearth_lowres'))\n",
         "t = world.merge(df_tf1, how=\"left\", left_on=['name'], right_on=['Country'])\n",
         "t=t.fillna(0)\n",
@@ -660,7 +671,7 @@
         "sorted_df = df_final.sort_values(by = \"Year\", ascending = True)\n",
         "\n",
         "\n",
-        "fig = px.bar(sorted_df, x = \"continent\", y = \"Annual CO2 emissions (zero filled)\",\n",
+        "fig = px.scatter(sorted_df, x = \"continent\", y = \"Annual CO2 emissions (zero filled)\",\n",
         "                    animation_frame = \"Year\",\n",
         "                    color = \"Annual CO2 emissions (zero filled)\", color_continuous_scale = \"jet\")\n",
         "                    \n",
@@ -687,7 +698,29 @@
     {
       "cell_type": "code",
       "source": [
-        "df_p = df_final.groupby(['Year','continent'])['Annual CO2 emissions'].sum().unstack()\n",
+        "df_final.columns"
+      ],
+      "metadata": {
+        "id": "iWi0JIKwIZym"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_final.head()"
+      ],
+      "metadata": {
+        "id": "-2yl8wVFJsmU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_p = df_final.groupby(['Year','continent'])['CO2 emissions'].sum().unstack()\n",
         "df_p"
       ],
       "metadata": {
@@ -737,6 +770,113 @@
       ],
       "metadata": {
         "id": "_r-cXO_5NNUa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_g = df_final.groupby(['Year','continent'])['GDP'].sum().unstack()\n",
+        "df_g"
+      ],
+      "metadata": {
+        "id": "MZx7sDkNPAp4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_g.loc['1975-1979', :] = df_g.loc[[1975, 1976, 1977, 1978, 1979]].sum()\n",
+        "df_g.loc['1980-1984', :] = df_g.loc[[1980, 1981, 1982, 1983, 1984]].sum()\n",
+        "df_g.loc['1985-1989', :] = df_g.loc[[1985, 1986, 1987, 1988, 1989]].sum()\n",
+        "df_g.loc['1990-1994', :] = df_g.loc[[1990, 1991, 1992, 1993, 1994]].sum()\n",
+        "df_g.loc['1995-1999', :] = df_g.loc[[1995, 1996, 1997, 1998, 1999]].sum()\n",
+        "df_g.loc['2000-2004', :] = df_g.loc[[2000, 2001, 2002, 2003, 2004]].sum()\n",
+        "df_g.loc['2005-2009', :] = df_g.loc[[2005, 2006, 2007, 2008, 2009]].sum()\n",
+        "df_g.loc['2010-2014', :] = df_g.loc[[2010, 2011, 2012, 2013, 2014]].sum()\n",
+        "df_g.loc['2015-2019', :] = df_g.loc[[2015, 2016, 2017, 2018, 2019]].sum()"
+      ],
+      "metadata": {
+        "id": "et6qB5MGPoUA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_g = df_g.loc[['1975-1979','1980-1984','1985-1989', '1990-1994','1995-1999', '2000-2004','2005-2009', '2010-2014', '2015-2019']]\n",
+        "df_g.reset_index()\n",
+        "df_g"
+      ],
+      "metadata": {
+        "id": "i3oRzl_SP7Tb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(15, 7))\n",
+        "plt.title('GDP per 5 years', fontsize=15)\n",
+        "plt.ylabel('GDP')\n",
+        "sns.lineplot(data=df_g, marker='o', linewidth=3)"
+      ],
+      "metadata": {
+        "id": "Yo9OsxW3Otl3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Co2 emission/GDP\n",
+        "df_pg=df_p/df_g"
+      ],
+      "metadata": {
+        "id": "pnURHgOUQjkj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(15, 7))\n",
+        "plt.title('Co2 emission GDP 5 years', fontsize=15)\n",
+        "plt.ylabel('Co2 emission GDP')\n",
+        "sns.lineplot(data=df_pg, marker='o', linewidth=3)"
+      ],
+      "metadata": {
+        "id": "93bl9ZbsRGLZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#'GDP, PPP (constant 2017 international $)'\n",
+        "df_final = df_final.drop(columns = ['pop_est','iso_a3','gdp_md_est','Median temperature anomaly from 1961-1990 average','CO2 concentrations', 'Sea surface temp' ,'Annual CO2 emissions (zero filled)','Annual CO2 emissions'])"
+      ],
+      "metadata": {
+        "id": "xun9htOCLHMQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_final.info()"
+      ],
+      "metadata": {
+        "id": "LTeUu_QTNonj"
       },
       "execution_count": null,
       "outputs": []
