Colaboratory를 통해 생성됨

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -28,6 +28,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "1. 최초가설 : Co2 배출량은 아시아에서 가장 많이 배출되고 있다. 산업을 함에 있어서 Co2를 배출하는 것은 어쩔 수 없는 일이다. 그렇기 때문에 발전소 연료 중 Co2 배출량이 적은 것을 찾아보자\n",
+        "그러기 위해서 target은 Co2 emission으로 하자"
+      ],
+      "metadata": {
+        "id": "NNKug0IQ6s9e"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -170,7 +180,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_cli.fillna(df_cli.mean())"
+        "df_cli.fillna(0)"
       ],
       "metadata": {
         "id": "P58BkXdYxLT5"
@@ -496,8 +506,7 @@
       "source": [
         "df_1 = df_n.merge(df_e, how = 'outer')\n",
         "df_2 = df_1.merge(fossil_copy, how = 'outer')\n",
-        "df_3 = df_2.merge(df_t, how = 'outer')\n",
-        "df_t1 = df_3.merge(df_cli, how = 'outer')"
+        "df_t1 = df_2.merge(df_t, how = 'outer')"
       ],
       "metadata": {
         "id": "x5hjrk4N_K4F"
@@ -519,7 +528,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_total = df_t1.drop(columns = ['Sea surface temp (lower-bound)','Sea surface temp (upper-bound)','Lower bound (95% CI)','Upper bound (95% CI)'])"
+        "df_total = df_t1.drop(columns = ['Lower bound (95% CI)','Upper bound (95% CI)'])"
       ],
       "metadata": {
         "id": "emApv28HBt8S"
@@ -652,17 +661,6 @@
     {
       "cell_type": "code",
       "source": [
-        "df_tf1 =df_tf1.fillna(df_tf1.mean())"
-      ],
-      "metadata": {
-        "id": "G3a8k-lYKB-O"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "world = geopandas.read_file(geopandas.datasets.get_path('naturalearth_lowres'))\n",
         "t = world.merge(df_tf1, how=\"left\", left_on=['name'], right_on=['Country'])\n",
         "t=t.fillna(0)\n",
@@ -720,7 +718,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_p = df_final.groupby(['Year','continent'])['CO2 emissions'].sum().unstack()\n",
+        "df_p = df_final.groupby(['Year','continent'])['CO2_emission'].sum().unstack()\n",
         "df_p"
       ],
       "metadata": {
@@ -789,7 +787,6 @@
     {
       "cell_type": "code",
       "source": [
-        "df_g.loc['1975-1979', :] = df_g.loc[[1975, 1976, 1977, 1978, 1979]].sum()\n",
         "df_g.loc['1980-1984', :] = df_g.loc[[1980, 1981, 1982, 1983, 1984]].sum()\n",
         "df_g.loc['1985-1989', :] = df_g.loc[[1985, 1986, 1987, 1988, 1989]].sum()\n",
         "df_g.loc['1990-1994', :] = df_g.loc[[1990, 1991, 1992, 1993, 1994]].sum()\n",
@@ -808,7 +805,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_g = df_g.loc[['1975-1979','1980-1984','1985-1989', '1990-1994','1995-1999', '2000-2004','2005-2009', '2010-2014', '2015-2019']]\n",
+        "df_g = df_g.loc[['1980-1984','1985-1989', '1990-1994','1995-1999', '2000-2004','2005-2009', '2010-2014', '2015-2019']]\n",
         "df_g.reset_index()\n",
         "df_g"
       ],
@@ -849,8 +846,10 @@
       "source": [
         "plt.figure(figsize=(15, 7))\n",
         "plt.title('Co2 emission GDP 5 years', fontsize=15)\n",
-        "plt.ylabel('Co2 emission GDP')\n",
-        "sns.lineplot(data=df_pg, marker='o', linewidth=3)"
+        "plt.ylabel('Co2 emission per GDP')\n",
+        "sns.lineplot(data=df_pg, marker='o', linewidth=3)\n",
+        "#2000~2014까지 아시아는 Co2 배출속도가 GDP성장속도보다 빠르다(이때 중국이 세계의 공장이되어서 많은 공장이 중국에 지어짐)\n",
+        "#대부분의 대륙에서는 Co2배출속도보다 GDP의 성장속도가 더 빨랐다"
       ],
       "metadata": {
         "id": "93bl9ZbsRGLZ"
@@ -861,8 +860,90 @@
     {
       "cell_type": "code",
       "source": [
-        "#'GDP, PPP (constant 2017 international $)'\n",
-        "df_final = df_final.drop(columns = ['pop_est','iso_a3','gdp_md_est','Median temperature anomaly from 1961-1990 average','CO2 concentrations', 'Sea surface temp' ,'Annual CO2 emissions (zero filled)','Annual CO2 emissions'])"
+        "df_h = df_final.groupby(['Year','continent'])['Population'].sum().unstack()\n",
+        "df_h"
+      ],
+      "metadata": {
+        "id": "9CAPKAhIv4oC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_h.loc['1980-1984', :] = df_h.loc[[1980, 1981, 1982, 1983, 1984]].sum()\n",
+        "df_h.loc['1985-1989', :] = df_h.loc[[1985, 1986, 1987, 1988, 1989]].sum()\n",
+        "df_h.loc['1990-1994', :] = df_h.loc[[1990, 1991, 1992, 1993, 1994]].sum()\n",
+        "df_h.loc['1995-1999', :] = df_h.loc[[1995, 1996, 1997, 1998, 1999]].sum()\n",
+        "df_h.loc['2000-2004', :] = df_h.loc[[2000, 2001, 2002, 2003, 2004]].sum()\n",
+        "df_h.loc['2005-2009', :] = df_h.loc[[2005, 2006, 2007, 2008, 2009]].sum()\n",
+        "df_h.loc['2010-2014', :] = df_h.loc[[2010, 2011, 2012, 2013, 2014]].sum()\n",
+        "df_h.loc['2015-2019', :] = df_h.loc[[2015, 2016, 2017, 2018, 2019]].sum()"
+      ],
+      "metadata": {
+        "id": "TEyd6Ff_3u1P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_h = df_h.loc[['1980-1984','1985-1989', '1990-1994','1995-1999', '2000-2004','2005-2009', '2010-2014', '2015-2019']]\n",
+        "df_h.reset_index()\n",
+        "df_h"
+      ],
+      "metadata": {
+        "id": "TZOTpb5K4CqT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(15, 7))\n",
+        "plt.title('Population 5 years', fontsize=15)\n",
+        "plt.ylabel('Population')\n",
+        "sns.lineplot(data=df_h, marker='o', linewidth=3)"
+      ],
+      "metadata": {
+        "id": "uTwg20mg4TEv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Co2 emission/Population\n",
+        "df_ph=df_p/df_h"
+      ],
+      "metadata": {
+        "id": "TyFxWcy14pcE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(15, 7))\n",
+        "plt.title('Co2 emission Population 5 years', fontsize=15)\n",
+        "plt.ylabel('Co2 emission per Population')\n",
+        "sns.lineplot(data=df_ph, marker='o', linewidth=3)"
+      ],
+      "metadata": {
+        "id": "N6eUajrk4aKx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_final = df_final.drop(columns = ['Country','GDP, PPP (constant 2017 international $)','pop_est','iso_a3','gdp_md_est','Median temperature anomaly from 1961-1990 average','Annual CO2 emissions (zero filled)','Annual CO2 emissions'])"
       ],
       "metadata": {
         "id": "xun9htOCLHMQ"
@@ -873,10 +954,112 @@
     {
       "cell_type": "code",
       "source": [
-        "df_final.info()"
+        "!pip install scikit-learn==0.24.2\n",
+        "!pip install category_encoders"
       ],
       "metadata": {
         "id": "LTeUu_QTNonj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_final.nunique().sort_values(ascending=False)"
+      ],
+      "metadata": {
+        "id": "ogRPDQsrBxtc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_final['Energy_type'].value_counts(normalize=True)"
+      ],
+      "metadata": {
+        "id": "gWGgEdhTDGlp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_final['Bunker fuels (Not in Total)']"
+      ],
+      "metadata": {
+        "id": "95HX4IaMHCBg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "target = \"CO2_emission\"\n",
+        "feature = df_final.columns.drop(target)\n",
+        "target = df_final[target]"
+      ],
+      "metadata": {
+        "id": "FjrCIf7e71ZX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_final.info()"
+      ],
+      "metadata": {
+        "id": "Nia4LmB7R_3s"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def Div_df(df,feature,target):\n",
+        "  global X_train,X_val,X_test,y_train,y_val,y_test\n",
+        "  X_train,X_test,y_train,y_test = train_test_split(df[feature],target,train_size = 0.8, test_size=0.2, random_state=2)\n",
+        "  X_train,X_val,y_train,y_val = train_test_split(X_train,y_train,train_size = 0.8, test_size=0.2, random_state=2)\n",
+        "  print(\"train_data = \",len(X_train))\n",
+        "  print(\"val_data = \",len(X_val))\n",
+        "  print(\"test_data = \",len(X_test))\n",
+        "Div_df(df_final,feature,target)"
+      ],
+      "metadata": {
+        "id": "XBHyTcEFPv9G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from category_encoders import LabelEncoder\n",
+        "\n",
+        "encoder = LabelEncoder()\n",
+        "X_train_encoded = encoder.fit_transform(X_train)\n",
+        "X_val_encoded = encoder.transform(X_val)"
+      ],
+      "metadata": {
+        "id": "yoU1N9UfUA1I"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "mMj_eHwEU4oP"
       },
       "execution_count": null,
       "outputs": []
