Colaboratory를 통해 생성됨

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -954,8 +954,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install scikit-learn==0.24.2\n",
-        "!pip install category_encoders"
+        "!pip install category_encoders"
       ],
       "metadata": {
         "id": "LTeUu_QTNonj"
@@ -1041,9 +1040,9 @@
     {
       "cell_type": "code",
       "source": [
-        "from category_encoders import LabelEncoder\n",
+        "from category_encoders import OrdinalEncoder\n",
         "\n",
-        "encoder = LabelEncoder()\n",
+        "encoder = OrdinalEncoder()\n",
         "X_train_encoded = encoder.fit_transform(X_train)\n",
         "X_val_encoded = encoder.transform(X_val)"
       ],
@@ -1056,7 +1055,7 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "from xgboost import XGBRegressor"
       ],
       "metadata": {
         "id": "mMj_eHwEU4oP"
