Colaboratory를 통해 생성됨

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -30,7 +30,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. 최초가설 : Co2 배출량은 아시아에서 가장 많이 배출되고 있다. 산업을 함에 있어서 Co2를 배출하는 것은 어쩔 수 없는 일이다. 그렇기 때문에 발전소 연료 중 Co2 배출량이 적은 것을 찾아보자\n",
+        "1. 최초가설 : Co2 배출량은 아시아에서 가장 많이 배출되고 있다.\n",
+        "그렇다면 인구 / GDP 등은 Co2 배출과 관련이 있을 것이다. 또한 산업을 함에 있어서 Co2를 배출하는 것은 어쩔 수 없는 일이다. 그렇기 때문에 발전소 연료 중 Co2 배출량이 적은 것을 찾아보자\n",
         "그러기 위해서 target은 Co2 emission으로 하자"
       ],
       "metadata": {
@@ -943,21 +944,10 @@
     {
       "cell_type": "code",
       "source": [
-        "df_final = df_final.drop(columns = ['Country','GDP, PPP (constant 2017 international $)','pop_est','iso_a3','gdp_md_est','Median temperature anomaly from 1961-1990 average','Annual CO2 emissions (zero filled)','Annual CO2 emissions'])"
+        "df_final = df_final.drop(columns = ['Country','GDP, PPP (constant 2017 international $)','pop_est','iso_a3','gdp_md_est','Median temperature anomaly from 1961-1990 average','geometry','Annual CO2 emissions (zero filled)','Annual CO2 emissions'])"
       ],
       "metadata": {
         "id": "xun9htOCLHMQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install category_encoders"
-      ],
-      "metadata": {
-        "id": "LTeUu_QTNonj"
       },
       "execution_count": null,
       "outputs": []
@@ -1040,6 +1030,69 @@
     {
       "cell_type": "code",
       "source": [
+        "df_final = df_final.drop(columns = ['geometry'])"
+      ],
+      "metadata": {
+        "id": "zhVxrb3RVk5y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Baseline Model\n",
+        "predict = df_final[\"CO2_emission\"].mean()\n",
+        "errors = predict - df_final[\"CO2_emission\"]\n",
+        "mean_absolute_error = errors.abs().mean()"
+      ],
+      "metadata": {
+        "id": "TGzHsXN4dUk7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_tf = df_final[df_final['Total']!=0].reset_index(drop=True)\n",
+        "df_tf"
+      ],
+      "metadata": {
+        "id": "8mwYQxHaiLaO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "##Baseline Model 시각화\n",
+        "x = df_tf[\"Total\"]\n",
+        "y = df_final[\"CO2_emission\"]\n",
+        "sns.lineplot(x=x, y=predict, color='red')\n",
+        "sns.scatterplot(x=x, y=y, color='blue');"
+      ],
+      "metadata": {
+        "id": "Q44oiQf8dx3J"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install category_encoders"
+      ],
+      "metadata": {
+        "id": "4YbqTxjrHf85"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from category_encoders import OrdinalEncoder\n",
         "\n",
         "encoder = OrdinalEncoder()\n",
@@ -1055,10 +1108,41 @@
     {
       "cell_type": "code",
       "source": [
-        "from xgboost import XGBRegressor"
+        "from xgboost import XGBRegressor\n",
+        "from sklearn import metrics \n",
+        "from sklearn.model_selection import GridSearchCV"
       ],
       "metadata": {
         "id": "mMj_eHwEU4oP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = XGBRegressor(booster = 'gblinear',\n",
+        "    learning_rate =0.1,\n",
+        "    n_estimators=1000,\n",
+        "    max_depth=5,\n",
+        "    objective= 'reg:linear',\n",
+        "    scale_pos_weight=1,\n",
+        "    seed=27)\n",
+        "model.fit(X_train_encoded,y_train)"
+      ],
+      "metadata": {
+        "id": "cVfT-33TH9l-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.scatterplot(raw['PRICE'], model.predict(X_train_encoded))"
+      ],
+      "metadata": {
+        "id": "Bl0hushdXEwe"
       },
       "execution_count": null,
       "outputs": []
